--- a/FinalProject/AdminApplication/Views/Admin/GetAllProducts.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/GetAllProducts.cshtml
@@ -21,12 +21,14 @@
                     <thead>
                         <tr>
                             <th style="vertical-align:middle;">Mã Danh Mục</th>
-                            <th style="vertical-align:middle;">Mã Sản Phẩm</th>
+                            @*<th style="vertical-align:middle;">Mã Sản Phẩm</th>*@
                             <th style="vertical-align:middle;">Tên Sản Phẩm</th>
                             <th style="vertical-align:middle;">Đơn Giá</th>
                             <th style="vertical-align:middle;">Số Lượng</th>
                             <th style="vertical-align:middle;">Ngày Nhập</th>
                             <th style="vertical-align:middle;">Mô Tả</th>
+                            <th style="vertical-align:middle;">Đặc điểm</th>
+                            <th style="vertical-align:middle;">Gói</th>
                             <th style="vertical-align:middle;">Trạng Thái</th>
                             <th style="vertical-align:middle;">Hình Ảnh</th>
                             <th style="vertical-align:middle;">Các Bài Đánh Giá</th>
@@ -37,12 +39,14 @@
                     <tfoot>
                         <tr>
                             <th style="vertical-align:middle;">Mã Danh Mục</th>
-                            <th style="vertical-align:middle;">Mã Sản Phẩm</th>
+                            @*     <th style="vertical-align:middle;">Mã Sản Phẩm</th>*@
                             <th style="vertical-align:middle;">Tên Sản Phẩm</th>
                             <th style="vertical-align:middle;">Đơn Giá</th>
                             <th style="vertical-align:middle;">Số Lượng</th>
                             <th style="vertical-align:middle;">Ngày Nhập</th>
                             <th style="vertical-align:middle;">Mô Tả</th>
+                            <th style="vertical-align:middle;">Đặc điểm</th>
+                            <th style="vertical-align:middle;">Gói</th>
                             <th style="vertical-align:middle;">Trạng Thái</th>
                             <th style="vertical-align:middle;">Hình Ảnh</th>
                             <th style="vertical-align:middle;">Các Bài Đánh Giá</th>
@@ -54,13 +58,15 @@
                         {
                             <tr>
                                 <td style="vertical-align:middle;">@item.MaDm</td>
-                                <td style="vertical-align:middle;">@item.MaSp</td>
+                                @*  <td style="vertical-align:middle;">@item.MaSp</td>*@
                                 <td style="vertical-align:middle;">@item.TenSp</td>
                                 <td style="vertical-align:middle;">@item.Gia đ</td>
                                 <td style="vertical-align:middle;">@item.SoLuong</td>
 
                                 <td style="vertical-align:middle;">@item.NgayNhap</td>
                                 <td style="vertical-align:middle;">@item.MoTa</td>
+                                <td style="vertical-align:middle;">@item.Goi</td>
+                                <td style="vertical-align:middle;">@item.DacDiem</td>
                                 <td style="vertical-align:middle;">@item.TrangThai</td>
                                 <td style="vertical-align:middle;">@item.HinhAnh</td>
                                 <td style="vertical-align:middle;text-align:center;">
