--- a/FinalProject/AdminApplication/Views/Admin/AddCategory.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/AddCategory.cshtml
@@ -20,11 +20,12 @@
                 </div>
                 <div class="card-body">
                     <p class="form-label" style="color: red">(*)Mã danh mục sẽ được tạo tự động</p>
-                    @using (Html.BeginForm("SaveCategory", "Admin", FormMethod.Post))
+                    @using (Html.BeginForm("AddCategory", "Admin", FormMethod.Post))
                     {
                         <div class="mb-3">
                             <label for="TenDm" class="form-label">Tên Danh Mục: </label>
                             @Html.TextBoxFor(m => m.TenDm,  new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.TenDm,"", new { @class = "text-danger" } )
                         </div>
 
 
