--- a/FinalProject/AdminApplication/Views/Admin/GetUserAccount.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/GetUserAccount.cshtml
@@ -6,7 +6,7 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Thông Tin Tài Khoản Của Người Dùng @Model.UserId</h1>
+                    <h1 class="h3 mb-2 text-gray-800">Thông Tin Tài Khoản Của Người Dùng @ViewBag.TenKh</h1>
                   
 
                     <!-- DataTales Example -->
@@ -23,7 +23,6 @@
                                             <th style="vertical-align:middle;">Mã Tài Khoản</th>
                                             <th style="vertical-align:middle;">Email</th>
                                             <th style="vertical-align:middle;">Password</th>
-                                            <th style="vertical-align:middle;">Tên</th>
                                             <th style="vertical-align:middle;">Tùy Chỉnh</th>
                                         </tr>
                                     </thead>
@@ -32,7 +31,6 @@
                                             <th style="vertical-align:middle;">Mã Tài Khoản</th>
                                             <th style="vertical-align:middle;">Email</th>
                                             <th style="vertical-align:middle;">Password</th>
-                                            <th style="vertical-align:middle;">Tên</th>
                                             <th style="vertical-align:middle;">Tùy Chỉnh</th>
                                       
                                         </tr>
@@ -43,7 +41,6 @@
                                                 <td style="vertical-align:middle;">@Model.UserId</td>
                                                 <td style="vertical-align:middle;">@Model.Email</td>
                                                 <td style="vertical-align:middle;">@Model.Password</td>
-                                                <td style="vertical-align:middle;">@Model.Name</td>
                                     
                                                 <td style="vertical-align:middle;">
                                                      @Html.ActionLink("Edit","EditUser",new{id = Model.UserId})
