--- a/FinalProject/AdminApplication/Views/Admin/EditProduct.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/EditProduct.cshtml
@@ -16,7 +16,7 @@
             <!-- Custom Text Color Utilities -->
             <div class="card shadow mb-4">
                 <div class="card-header py-3">
-                    <h6 class="m-0 font-weight-bold text-primary">Cập nhật thông tin sản phẩm cần thêm</h6>
+                    <h6 class="m-0 font-weight-bold text-primary">Cập nhật thông tin sản phẩm</h6>
                 </div>
                 <div class="card-body">
                     @using (Html.BeginForm("EditProduct", "Admin", FormMethod.Post))
