--- a/FinalProject/AdminApplication/Views/Admin/GetAllCustomerRates.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/GetAllCustomerRates.cshtml
@@ -3,12 +3,15 @@
 }
 
 @model List<AdminApplication.Models.DanhGia>
+@{
+    var name = @Model[0].MaKhNavigation.TenKh;
+}
 
 
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Bảng Danh Sách Thông Tin Các Bài Đánh Giá Của Khách Hàng @ViewBag.cusID</h1>
+                    <h1 class="h3 mb-2 text-gray-800">Bảng Danh Sách Thông Tin Các Bài Đánh Giá Của Khách Hàng: @name </h1>
                   
 
                     <!-- DataTales Example -->
@@ -22,9 +25,9 @@
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                     <thead>
                                         <tr>
-                                            <th style="vertical-align:middle;">Mã Khách Hàng</th>
+                                            
                                             <th style="vertical-align:middle;">Mã Đánh Giá</th>
-                                            <th style="vertical-align:middle;">Mã Sản Phẩm</th>
+                                            <th style="vertical-align:middle;">Sản Phẩm</th>
                                             <th style="vertical-align:middle;">Mức Đánh Giá</th>
                                             <th style="vertical-align:middle;">Nhận xét</th>
                                             <th style="vertical-align:middle;">Tùy Chỉnh</th>
@@ -32,9 +35,9 @@
                                     </thead>
                                     <tfoot>
                                         <tr>
-                                            <th style="vertical-align:middle;">Mã Khách Hàng</th>
+                                            
                                             <th style="vertical-align:middle;">Mã Đánh Giá</th>
-                                            <th style="vertical-align:middle;">Mã Sản Phẩm</th>
+                                            <th style="vertical-align:middle;">Sản Phẩm</th>
                                             <th style="vertical-align:middle;">Mức Đánh Giá</th>
                                             <th style="vertical-align:middle;">Nhận xét</th>
                                             <th style="vertical-align:middle;">Tùy Chỉnh</th>
@@ -45,9 +48,9 @@
                                         @foreach(var item in Model)
                                         {
                                           <tr>
-                                             <td style="vertical-align:middle;">@item.MaKh</td>
+                                            
                                              <td style="vertical-align:middle;">@item.MaDg</td>
-                                             <td style="vertical-align:middle;">@item.MaSp</td>
+                                             <td style="vertical-align:middle;">@item.MaSpNavigation.TenSp</td>
                                              <td style="vertical-align:middle;">@item.MucDg</td>
                                              <td style="vertical-align:middle;">@item.NhanXet</td>
                                     
