--- a/FinalProject/AdminApplication/Views/Admin/GetAllCustomers.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/GetAllCustomers.cshtml
@@ -24,8 +24,8 @@
                                             <th style="vertical-align:middle;">Tên Khách Hàng</th>
                                             <th style="vertical-align:middle;">Số Điện Thoại</th>
                                             <th style="vertical-align:middle;">Địa Chỉ</th>
-                                            <th style="vertical-align:middle;">Mã Tài Khoản</th>
-                                            <th style="vertical-align:middle;">Số Bài Đánh Giá</th>
+                                            <th style="vertical-align:middle;">Tài Khoản</th>
+                                            <th style="vertical-align:middle;">Các Bài Đánh Giá</th>
                                             <th style="vertical-align:middle;">Tùy Chỉnh</th>
 
                                             @*<th style="vertical-align:middle;">Tài Khoản</th>
@@ -39,7 +39,7 @@
                                             <th style="vertical-align:middle;">Tên Khách Hàng</th>
                                             <th style="vertical-align:middle;">Số Điện Thoại</th>
                                             <th style="vertical-align:middle;">Địa Chỉ</th>
-                                            <th style="vertical-align:middle;">Mã Tài Khoản</th>
+                                            <th style="vertical-align:middle;">Tài Khoản</th>
                                             <th style="vertical-align:middle;">Các Bài Đánh Giá</th>
                                             <th style="vertical-align:middle;">Tùy Chỉnh</th>
 
@@ -57,9 +57,9 @@
                                                 <td style="vertical-align:middle;">@item.TenKh</td>
                                                 <td style="vertical-align:middle;">@item.Sdt</td>
                                                 <td style="vertical-align:middle;">@item.DiaChiKh</td>
-                                                <td style="vertical-align:middle;"> 
-                                                    @item.UserId 
-                                                    @Html.ActionLink("Detail","GetUserAccount",new{id = item.UserId},new{@style="float:right;"})
+                                                <td style="vertical-align:middle;text-align:center;"> 
+                                               
+                                                    @Html.ActionLink("Detail","GetUserAccount",new{id = item.UserId})
                                                 </td>
                                                 <td style="vertical-align:middle;text-align:center;"> 
                                                     @Html.ActionLink("Show","GetAllCustomerRates",new{id = item.MaKh})
