--- a/FinalProject/AdminApplication/Views/Admin/GetUserAccount.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/GetUserAccount.cshtml
@@ -2,11 +2,11 @@
     Layout = "~/Views/Shared/_adminLayout.cshtml";
 }
 
-@model AdminApplication.Models.User
+@model AdminApplication.Models.KhachHang
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Thông Tin Tài Khoản Của Người Dùng @ViewBag.TenKh</h1>
+                    <h1 class="h3 mb-2 text-gray-800">Thông Tin Tài Khoản Của Người Dùng @Model.TenKh</h1>
                   
 
                     <!-- DataTales Example -->
@@ -39,8 +39,8 @@
                                       
                                             <tr>
                                                 <td style="vertical-align:middle;">@Model.UserId</td>
-                                                <td style="vertical-align:middle;">@Model.Email</td>
-                                                <td style="vertical-align:middle;">@Model.Password</td>
+                                                <td style="vertical-align:middle;">@Model.User.Email</td>
+                                                <td style="vertical-align:middle;">@Model.User.Password</td>
                                     
                                                 <td style="vertical-align:middle;">
                                                      @Html.ActionLink("Edit","EditUser",new{id = Model.UserId})
