--- a/FinalProject/AdminApplication/Views/Admin/GetAllBills.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/GetAllBills.cshtml
@@ -21,7 +21,7 @@
                     <thead>
                         <tr>
                             @*<th style="vertical-align:middle;">Mã Đơn Hàng</th>*@
-                            <th style="vertical-align:middle;">Mã Khách Hàng</th>
+                            <th style="vertical-align:middle;">Tên Khách Hàng</th>
                             <th style="vertical-align:middle;">Địa Chỉ Giao</th>
                             <th style="vertical-align:middle;">Ngày Lập</th>
                             <th style="vertical-align:middle;">Ngày Giao</th>
@@ -39,7 +39,7 @@
                     <tfoot>
                         <tr>
                             @*<th style="vertical-align:middle;">Mã Đơn Hàng</th>*@
-                            <th style="vertical-align:middle;">Mã Khách Hàng</th>
+                            <th style="vertical-align:middle;">Tên Khách Hàng</th>
                             <th style="vertical-align:middle;">Địa Chỉ Giao</th>
                             <th style="vertical-align:middle;">Ngày Lập</th>
                             <th style="vertical-align:middle;">Ngày Giao</th>
@@ -57,8 +57,8 @@
                         @foreach (var item in Model)
                         {
                             <tr>
-@*                                <td style="vertical-align:middle;">@item.MaDh</td>
-*@                                <td style="vertical-align:middle;">@item.MaKh</td>
+@*                                <td style="vertical-align:middle;">@item.MaDh</td>*@ 
+                                <td style="vertical-align:middle;">@item.MaKhNavigation.TenKh</td>
                                 <td style="vertical-align:middle;">@item.DiaChiGiao</td>
                                 <td style="vertical-align:middle;">@item.NgayLap</td>
                                 <td style="vertical-align:middle;">@item.NgayGiao</td>
