--- a/FinalProject/AdminApplication/Views/Admin/GetBillDetail.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/GetBillDetail.cshtml
@@ -3,10 +3,13 @@
 }
 
 @model List<AdminApplication.Models.ChiTietDonHang>
+@{
+    var billId = Model[0].MaDh;
+}
 <div class="container-fluid">
 
     <!-- Page Heading -->
-    <h1 class="h3 mb-2 text-gray-800">Bảng Thông Tin Chi Tiết Đơn Hàng @ViewBag.billID</h1>
+    <h1 class="h3 mb-2 text-gray-800">Bảng Thông Tin Chi Tiết Đơn Hàng @billId </h1>
 
 
     <!-- DataTales Example -->
@@ -22,7 +25,7 @@
                         <tr>
                            @* <th style="vertical-align:middle;">Mã Chi Tiết</th>*@
                             <th style="vertical-align:middle;">Mã Đơn Hàng</th>
-                            <th style="vertical-align:middle;">Mã Sản Phẩm</th>
+                            <th style="vertical-align:middle;">Tên Sản Phẩm</th>
                             <th style="vertical-align:middle;">Số Lượng</th>
                         </tr>
                     </thead>
@@ -30,7 +33,7 @@
                         <tr>
                            @* <th style="vertical-align:middle;">Mã Chi Tiết</th>*@
                             <th style="vertical-align:middle;">Mã Đơn Hàng</th>
-                            <th style="vertical-align:middle;">Mã Sản Phẩm</th>
+                            <th style="vertical-align:middle;">Tên Sản Phẩm</th>
                             <th style="vertical-align:middle;">Số Lượng</th>
 
                         </tr>
@@ -41,7 +44,7 @@
                             <tr>
                               @*  <td style="vertical-align:middle;">@item.MaCtdh</td>*@
                                 <td style="vertical-align:middle;">@item.MaDh</td>
-                                <td style="vertical-align:middle;">@item.MaSp</td>
+                                <td style="vertical-align:middle;">@item.MaSpNavigation.TenSp</td>
                                 <td style="vertical-align:middle;">@item.SoLuong</td>
                             </tr>
                         }
