--- a/FinalProject/AdminApplication/Views/Home/Register.cshtml
+++ b/FinalProject/AdminApplication/Views/Home/Register.cshtml
@@ -5,7 +5,7 @@
 @if (ViewBag.Message != null)
 {
     <script type="text/javascript">
-        window.onload = function () {
+        window.onload = function() {
             alert("@ViewBag.Message");
         };
     </script>
@@ -22,17 +22,21 @@
                         <div class="text-center">
                             <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
                         </div>
-                        @using (Html.BeginForm("SaveAdmin", "Home", FormMethod.Post, new { @class = "user" }))
-                        {
+                        @using (Html.BeginForm("Register", "Home", FormMethod.Post, new { @class = "user" }))
+                        {     
+                            @Html.ValidationSummary(true,"",new { @class = "text-danger" })
                             <div class="form-group">
                                 @Html.TextBoxFor(m => m.Name,  new { @class = "form-control form-control-user", @id = "exampleFirstName", @placeholder = "Name" })
+                                @Html.ValidationMessageFor(m => m.Name,"", new { @class = "text-danger" } )
                             </div>
                             <div class="form-group">
                                 @Html.TextBoxFor(m => m.Email,  new { @class = "form-control form-control-user", @id = "exampleInputEmail", @placeholder = "Email Address" })
+                                @Html.ValidationMessageFor(m => m.Email,"", new { @class = "text-danger" } )
                             </div>
                             <div class="form-group row">
                                 <div class="col-sm-6 mb-3 mb-sm-0">
                                     @Html.TextBoxFor(m => m.Password,  new { @class = "form-control form-control-user", @id = "exampleInputPassword", @placeholder = "Password" ,@type = "password"})
+                                    @Html.ValidationMessageFor(m => m.Password,"", new { @class = "text-danger" } )
                                 </div>
                                 <div class="col-sm-6">
                                     <input name="rp_pass" type="password" class="form-control form-control-user"
