--- a/FinalProject/AdminApplication/Views/Admin/GetAllBills.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/GetAllBills.cshtml
@@ -68,7 +68,7 @@
                                 <td style="vertical-align:middle;">@item.NganHangNhan</td>
                                 <td style="vertical-align:middle;">@item.SoThe</td>
                                 <td style="vertical-align:middle;text-align:center;">
-                                    @Html.ActionLink("View","GetBillDetail",new{id = item.MaDh})
+                                    @Html.ActionLink("View","GetBillDetail",new{id = item.Id})
                                 </td>
                                 <td style="vertical-align:middle;">@item.TongTien</td>
 
