--- a/FinalProject/AdminApplication/Views/Admin/GetUserAccount.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/GetUserAccount.cshtml
@@ -38,7 +38,7 @@
                                     <tbody>
                                       
                                             <tr>
-                                                <td style="vertical-align:middle;">@Model.UserId</td>
+                                                <td style="vertical-align:middle;">@Model.User.Id</td>
                                                 <td style="vertical-align:middle;">@Model.User.Email</td>
                                                 <td style="vertical-align:middle;">@Model.User.Password</td>
                                     
