--- a/FinalProject/AdminApplication/Views/Admin/EditCustomer.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/EditCustomer.cshtml
@@ -22,14 +22,20 @@
 
                     @using (Html.BeginForm("EditCustomer", "Admin", FormMethod.Post))
                     {
+                         @Html.ValidationSummary(false,"",new { @class = "text-danger" })
+                         <div class="mb-3">
+                            <label for="MaKh" class="form-label">Mã Khách Hàng:</label>
+                            @Html.TextBoxFor(m => m.MaKh, new { @class = "form-control" , @readonly = "readonly" } )
+                        </div>
+                         <div class="mb-3">
+                            <label for="UserId" class="form-label">Id Khách Hàng:</label>
+                            @Html.TextBoxFor(m => m.Id, new { @class = "form-control" , @readonly = "readonly" } )
+                        </div>
                         <div class="mb-3">
                             <label for="UserId" class="form-label">Mã Tài Khoản:</label>
                             @Html.TextBoxFor(m => m.UserId, new { @class = "form-control" , @readonly = "readonly" } )
                         </div>
-                        <div class="mb-3">
-                            <label for="MaKh" class="form-label">Mã Khách Hàng:</label>
-                            @Html.TextBoxFor(m => m.MaKh, new { @class = "form-control" , @readonly = "readonly" } )
-                        </div>
+                      
                         <div class="mb-3">
                             <label for="TenKh" class="form-label">Tên Khách Hàng: </label>
                             @Html.TextBoxFor(m => m.TenKh,  new { @class = "form-control" })
