--- a/FinalProject/AdminApplication/Views/Admin/GetAllProductRates.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/GetAllProductRates.cshtml
@@ -3,14 +3,12 @@
 }
 
 @model List<AdminApplication.Models.DanhGia>
-@{
-    var name = Model[0].MaSpNavigation.TenSp;
-}
+
 
 <div class="container-fluid">
 
     <!-- Page Heading -->
-    <h1 class="h3 mb-2 text-gray-800">Bảng Danh Sách Thông Tin Các Bài Đánh Giá Của Sản Phẩm: @name </h1>
+    <h1 class="h3 mb-2 text-gray-800">Bảng Danh Sách Thông Tin Các Bài Đánh Giá Của Sản Phẩm: @ViewBag.prodName </h1>
 
 
     <!-- DataTales Example -->
