--- a/FinalProject/AdminApplication/Views/Home/Login.cshtml
+++ b/FinalProject/AdminApplication/Views/Home/Login.cshtml
@@ -8,7 +8,7 @@
 @if (ViewBag.Message != null)
 {
     <script type="text/javascript">
-        window.onload = function () {
+        window.onload = function() {
             alert("@ViewBag.Message");
         };
     </script>
@@ -31,16 +31,21 @@
                                 <div class="text-center">
                                     <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                                 </div>
-                                @using (Html.BeginForm("CheckAccount", "Home", FormMethod.Post, new { @class = "user" }))
+                                @using (Html.BeginForm("Login", "Home", FormMethod.Post, new { @class = "user" }))
                                 {
+                                    @Html.ValidationSummary(false,"",new { @class = "text-danger" })
                                     <div class="form-group">
-                                        <input type="email" name="account" class="form-control form-control-user" 
-                                        id="exampleInputEmail" aria-describedby="emailHelp" 
-                                        placeholder="Enter Email Address..." />         
+                                        @* <input type="email" name="account" class="form-control form-control-user"
+                                    id="exampleInputEmail" aria-describedby="emailHelp"
+                                    placeholder="Enter Email Address..." />*@
+                                        @Html.TextBoxFor(m => m.Email,  new { @class = "form-control form-control-user", @id = "exampleInputEmail", @placeholder = "Enter Email Address...", @type= "email"})
+                                        @Html.ValidationMessageFor(m => m.Email,"", new { @class = "text-danger" } )
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" name="pass" class="form-control form-control-user"
-                                           id="exampleInputPassword" placeholder="Password">
+                                        @*  <input type="password" name="pass" class="form-control form-control-user"
+                                    id="exampleInputPassword" placeholder="Password">*@
+                                        @Html.TextBoxFor(m => m.Password,  new { @class = "form-control form-control-user", @id = "exampleInputPassword", @placeholder = "Password", @type = "password"})
+                                        @Html.ValidationMessageFor(m => m.Password,"", new { @class = "text-danger" } )
                                     </div>
                                     <div class="form-group">
                                         <div class="custom-control custom-checkbox small">
