--- a/FinalProject/AdminApplication/Views/Admin/GetAllCustomers.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/GetAllCustomers.cshtml
@@ -59,7 +59,7 @@
                                                 <td style="vertical-align:middle;">@item.DiaChiKh</td>
                                                 <td style="vertical-align:middle;text-align:center;"> 
                                                
-                                                    @Html.ActionLink("Detail","GetUserAccount",new{id = item.Id})
+                                                    @Html.ActionLink("Detail","GetUserAccount",new{id = item.UserId})
                                                 </td>
                                                 <td style="vertical-align:middle;text-align:center;"> 
                                                     @Html.ActionLink("Show","GetAllCustomerRates",new{id = item.Id})
